<resources>
    <string name="app_name">weTravel</string>

    <!-- Bottom navigation bar names -->
    <string name="home_navigation">Home</string>
    <string name="trip_navigation">Trips</string>
    <string name="message_centre_navigation">Inbox</string>
    <string name="notification_centre_navigation">Notifications</string>


    
    <!-- Dropdown menu names -->
    <string name="view_profile">View Profile</string>
    <string name="edit_settings">Edit Settings</string>
    <string name="logout">Logout</string>
    
    <!-- Drawer Strings -->
    <string name="nav_drawer_open">Open Navigation Drawer</string>
    <string name="nav_drawer_close">Close Navigation Drawer</string>

    <!--User Search bar -->
    <string name="user_search_bar">User Search Bar</string>
    <string name="user_search_hint">Search for someone...</string>
    <string name="error_no_users">No profiles to display</string>
    <!--profile-->
    <string name="years_old">years old</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_changes">Save</string>
    <string name="friends_button">Friends</string>
    <string name="friends_tag">Friends</string>
    <string name="map">Map</string>
    <string name="trips">Trips</string>
    <string name="add_friend">Add Friend</string>
    <string name="requested">Requested</string>
    <string name="accept">Accept</string>
    <string name="profile_change_saved">Profile changes saved!</string>
    <string name="friend_requested">Friend request sent!</string>
    <string name="friend_accepted">Friend request Accepted!</string>
    <string name="profile_private">This users profile is set to private so only friends have access to their profile. Send a friend requet
    to this user if you would like view thier profile!</string>
    <string name="unknown_location">Unknown Location</string>
    <string name="no_description">No description Added</string>
    <string name="location_added">Location added to wishlist!</string>
    <string name="visited">Visited</string>
    <string name="locations">Locations</string>
    <string name="remove">Remove</string>
    <string name="wishlist_remove">Location removed from wishlist!</string>


    <!--Trips-->
    <string name="planned_trips">Planned</string>
    <string name="current_trips">Active</string>
    <string name="complete_trips">Completed</string>
    <string name="add_trips">New Trip</string>
    <string name="trip_details">Details</string>
    <string name="trip_itinerary">Itinerary</string>
    <string name="trip_add">Add Activity</string>
    <string name="trip_notes">Notes</string>
    <string name="trip_map">Map</string>
    <string name="trip_name">Name:</string>
    <string name="trip_picture">Picture:</string>
    <string name="trip_date_start">Start:</string>
    <string name="trip_date_finish">Finish:</string>
    <string name="trip_description">Description:</string>
    <string name="trip_location">Location:</string>
    <string name="trip_attendees">Attendees:</string>
    <string name="trip_add_attendee">Add</string>
    <string name="trip_edit_details">Edit Details</string>
    <string name="make_active">Make Active Trip</string>
    <string name="trip_notes_text">Notes:</string>
    <string name="trip_name_hint">Add Name</string>
    <string name="trip_picture_hint">Add Icon</string>
    <string name="trip_picture_change">Change Icon</string>
    <string name="trip_date_start_hint">Date Start</string>
    <string name="date_hyphen">-</string>
    <string name="trip_date_finish_hint">Date Finish</string>
    <string name="trip_time_start_hint">Time</string>
    <string name="trip_time_finish_hint">Time</string>
    <string name="trip_description_hint">Add Description</string>
    <string name="trip_location_hint">Add Destination</string>
    <string name="trip_notes_hint">Add Notes</string>
    <string name="trip_type_friend">Type Name...</string>
    <string name="trip_review_rating">Rating:</string>
    <string name="trip_review_rating_hint">Add Rating 1-5</string>
    <string name="trip_review_text">Review:</string>
    <string name="trip_review_text_hint">Add Review</string>
    <string name="trip_attachments">Attachments</string>
    <string name="trip_attachments_hint">Add Attachment</string>
    <string name="leave_trip">Leave</string>
    <string name="edit_trip">Edit</string>
    <string name="add_leg">Add Leg</string>
    <string name="add_activity">Add Activity</string>
    <string name="active">Active</string>
    <string name="complete">Complete</string>
    <string name="active_trip">Trip now active</string>
    <string name="select_leg">Select Leg:</string>
    <string name="select_location_text">Select Location:</string>
    <string name="quick_add_title">Add Activity From Location</string>
    <string name="trip_completed">Trip Completed</string>
    <string name="view_gallery">View Gallery</string>
    <string name="add_picture">Add Picture</string>
    <string name="post">Post</string>
    <string name="successful_post">Entry posted!</string>

    <!--Errors-->
    <string name="error_select_friend_dropdown">Please select friend from dropdown list to add</string>
    <string name="error_friend_already_added">Friend already added!</string>
    <string name="error_name_field">Please ensure name field is completed before saving</string>
    <string name="error_save">Error saving - please try again!</string>
    <string name="error_date_before">Please ensure finish date is after start date</string>
    <string name="error_attendee">Error adding friend, please try again</string>
    <string name="error_no_trips">No trips to display!</string>
    <string name="no_legs">Create trip to build itinerary</string>
    <string name="no_active">You do not have an active trip!</string>
    <string name="error">Error - please try again!</string>;
    <string name="no_gps">Location services must be switched on for quick add!</string>
    <string name="no_gallery">There are no images to view!</string>
    <string name="post_error">Error posting - please try again!</string>
    <string name="no_location_data">No location data to save!</string>
    <!--Success-->
    <string name="entry_saved">Entry Saved</string>


    <!--Settings-->
    <string name="set_private">Set Private Profile</string>
    <string name="private_description">Profile content and trips only visible to friends.</string>
    <string name="enable_location">Enable Location Services</string>
    <string name="allow_notifications">Allow Notifications</string>
    <string name="change_password">Change Password</string>
    <string name="enter_current_password">Current Password</string>
    <string name="enter_password">Enter New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_changed">Password Changed!</string>

    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyACeTakfYCAWo-qWFcLg_w5bk-KpOj9jt8</string>

    <!--login-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Signup here</string>
    <string name="login_error">Invalid username/password - please try again!</string>
    <string name="dob">DOB</string>
    <string name="register_name">Full Name</string>
    <string name="match_passwords">*Passwords must match!</string>
    <string name="format_password">*Password must contain at least 1 upper and lower case letter, 1 number and be atleast 8 characters long.</string>
    <string name="register">Register</string>
    <string name="enter_all">Please enter all fields!</string>
    <string name="username_taken">Username taken - please choose a new username!</string>

    <!--Notifications-->
    <string name="friend_req_notification">You have a new friend request!</string>
    <string name="friend_accept_notification">Your friend request has been accepted!</string>
    <string name="added_trip_notification">You have been added to a trip!</string>
    <string name="no_notifications">No notifications to display!</string>
    <string name="notification_title">New Notification</string>

    <!--Posts-->
    <string name="wishlist">Wishlist</string>
    <string name="has_posted">posted</string>
    <string name="from">from</string>

</resources>
