<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home_navigation"
        />

    <item
        android:id="@+id/menu_trips"
        android:icon="@drawable/ic_view_list_black_24dp"
        android:title="@string/trip_navigation"
        />

    <item
        android:id="@+id/menu_inbox"
        android:icon="@drawable/ic_chat_bubble_black_24dp"
        android:title="@string/message_centre_navigation"
        />

    <item
        android:id="@+id/menu_notifications"
        android:icon="@drawable/ic_notifications_none_black_24dp"
        android:title="@string/notification_centre_navigation"
        />

</menu>