<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home_navigation" />

    <item
        android:id="@+id/view_own_profile"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/view_profile" />

    <item
        android:id="@+id/edit_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/edit_settings" />


    <item
        android:id="@+id/tutorial"
        android:icon="@drawable/ic_help_black_24dp"
        android:title="@string/tutorial" />

</menu>