<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/change_password_dialog">

    <EditText
        android:layout_width="@dimen/password_dialog_width"
        android:layout_height="wrap_content"
        android:hint="@string/enter_current_password"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"
        android:id="@+id/enter_password"/>

    <EditText
        android:layout_width="@dimen/password_dialog_width"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/enter_password"
        android:inputType="textPassword"
        android:id="@+id/new_password"/>

    <EditText
        android:layout_width="@dimen/password_dialog_width"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:layout_centerHorizontal="true"
        android:inputType="textPassword"
        android:layout_below="@id/new_password"
        android:id="@+id/confirm_new_password"/>

</RelativeLayout>