<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    
    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_150sdp"
        android:src="@drawable/logo_icon"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"/>
    
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_username"
        android:layout_below="@id/login_logo"
        android:layout_marginTop="@dimen/_60sdp"
        android:inputType="textPersonName"
        android:layout_centerHorizontal="true"
        android:background="#11000000"
        android:ems="10"
        android:textSize="@dimen/_16sdp"
        android:hint="@string/username"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_password"
        android:layout_below="@id/login_username"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_alignLeft="@id/login_username"
        android:layout_alignStart="@id/login_username"
        android:layout_centerHorizontal="true"
        android:background="#11000000"
        android:ems="10"
        android:textSize="@dimen/_16sdp"
        android:inputType="textPassword"
        android:hint="@string/password"/>
    
    <androidx.cardview.widget.CardView
        android:id="@+id/login_button"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_below="@id/login_password"
        android:layout_centerHorizontal="true"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="@dimen/_10sdp"
        android:elevation="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_48sdp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_20sdp"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/login_button"
        android:layout_marginTop="@dimen/_24sdp"
        android:text="@string/signup"
        android:clickable="true"/>

</RelativeLayout>

</ScrollView>