<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <RelativeLayout
            android:id="@+id/top_layer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/trip_icon_margins"
            android:layout_marginRight="@dimen/trip_icon_margins">

            <RelativeLayout
                android:id="@+id/planned_trips"
                android:layout_width="@dimen/trip_tab_width"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/trip_icon_margins"
                android:background="@drawable/standard_border"
                android:padding="@dimen/trip_icon_padding">

                <ImageView
                    android:id="@+id/planned_trip_icon"
                    android:layout_width="@dimen/trip_icon"
                    android:layout_height="@dimen/trip_icon"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/ic_planned_trip" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/planned_trip_icon"
                    android:layout_centerHorizontal="true"
                    android:text="@string/planned_trips"
                    android:textSize="@dimen/major_text" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/current_trips"
                android:layout_width="@dimen/trip_tab_width"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/trip_icon_margins"
                android:layout_marginTop="@dimen/trip_icon_margins"
                android:layout_toRightOf="@id/planned_trips"
                android:background="@drawable/standard_border"
                android:padding="@dimen/trip_icon_padding">

                <ImageView
                    android:id="@+id/current_trip_icon"
                    android:layout_width="@dimen/trip_icon"
                    android:layout_height="@dimen/trip_icon"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/ic_current_trips" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/current_trip_icon"
                    android:layout_centerHorizontal="true"
                    android:text="@string/current_trips"
                    android:textSize="@dimen/major_text" />

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/top_layer"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/trip_icon_margins"
            android:layout_marginRight="@dimen/trip_icon_margins">

            <RelativeLayout
                android:id="@+id/complete_trips"
                android:layout_width="@dimen/trip_tab_width"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="@dimen/trip_icon_margins"
                android:background="@drawable/standard_border"
                android:padding="@dimen/trip_icon_padding">

                <ImageView
                    android:id="@+id/complete_trip_icon"
                    android:layout_width="@dimen/trip_icon"
                    android:layout_height="@dimen/trip_icon"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/ic_complete_trips" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/complete_trip_icon"
                    android:layout_centerHorizontal="true"
                    android:text="@string/complete_trips"
                    android:textSize="@dimen/major_text" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="@dimen/trip_tab_width"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/trip_icon_margins"
                android:layout_marginTop="@dimen/trip_icon_margins"
                android:layout_toRightOf="@id/complete_trips"
                android:background="@drawable/standard_border"
                android:padding="@dimen/trip_icon_padding"
                android:id="@+id/add_trip">

                <ImageView
                    android:id="@+id/add_trip_icon"
                    android:layout_width="@dimen/trip_icon"
                    android:layout_height="@dimen/trip_icon"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/ic_add_trip" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/add_trip_icon"
                    android:layout_centerHorizontal="true"
                    android:text="@string/add_trips"
                    android:textSize="@dimen/major_text" />

            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>
</ScrollView>